# Qmes

./: .coveragerc  .gitignore  404.html  CHANGELOG.md  CITATION.cff  DAILY_WORKFLOW.md  LICENSE  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  release.yml
Qmes/: __init__.py  config.py
Qmes/Qsun/: LICENSE  Qcircuit.py  Qdata.py  Qencodes.py  Qiqp.py  Qkernels.py  __init__.py
Qmes/_models/: __init__.py
Qmes/_models/classification/: config_meta.json  recommender.json  recommender.npz  recommender.pkl
Qmes/_models/regression/: config_meta.json  recommender.json  recommender.npz  recommender.pkl
Qmes/circuits/: __init__.py  registry.py
Qmes/data/: anomaly.py  classification.py  clustering.py  inference_clf.py  multilabel.py  preprocessing.py  regression.py  timeseries.py
Qmes/data/clf/: __init__.py  inference.py  train.py
Qmes/data/reg/: __init__.py  inference.py  train.py
Qmes/evaluators/: __init__.py  base.py  classification.py  regression.py
Qmes/extractors/: __init__.py  anomaly.py  base.py  classification.py  clustering.py  multilabel.py  regression.py  timeseries.py
Qmes/inference/: __init__.py  runner.py
Qmes/recommender/: __init__.py  pairwise.py  selection.py
advanced_usage/: index.html
api/: index.html
api/circuits/: index.html
api/evaluators/: index.html
api/extractors/: index.html
api/inference/: index.html
api/recommender/: index.html
architecture/: index.html
backup/: meta_dataset_classification_clean.csv  meta_dataset_regression_single.csv  pivot_mcc_classification_clean.csv  pivot_r2_regression.csv
changelog/: index.html
circuit_pool/: index.html
docs/: advanced_usage.md  architecture.md  circuit_pool.md  index.md  meta_features.md  quickstart.md  validation.md
docs/api/: circuits.md  evaluators.md  extractors.md  index.md  inference.md  recommender.md
meta_features/: index.html
quickstart/: index.html
results/: meta_dataset_classification_single.csv  meta_dataset_classification_single_avg_600samples.csv  meta_dataset_regression_single_avg_600samples.csv  pivot_mcc_classification.csv  pivot_mcc_classification_600samples.csv  pivot_mcc_inference_600samples.csv  pivot_r2_inference_600samples.csv  pivot_r2_regression_600samples.csv  recommender_clf_summary_600samples.csv  recommender_reg_summary_600samples.csv
scripts/: check_final.py  check_partial.py  check_subsample.py  check_symmetric.py  run_extractor_classification.py  run_inference_clf.py  run_oracle_classification.py  selection_and_save_clf.py  test file.ipynb  test_import.py  test_intergration.py  train_recommender_clf.py
scripts/clf/: 1_extract.py  2_evaluate.py  3_train.py  4_select_save.py  5_inference.py  6_baseline.py
scripts/reg/: 1_extract.py  2_evaluate.py  3_train.py  4_select_save.py  5_inference.py  6_baseline.py
search/: search_index.json
tests/: conftest.py  test_evaluators.py  test_extractors.py  test_integration.py  test_recommender.py  test_selection.py
validation/: index.html
