[project]
name = "qmes"
version = "0.1.0"
description = "Quantum Meta-learning for Encoding Selection — recommends quantum encoding circuits for tabular datasets without quantum evaluation at inference time."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "problexity>=0.5.0",
    "ucimlrepo>=0.0.3",
]

[project.optional-dependencies]
scripts = ["scipy>=1.7"]   # chỉ scripts/ cần, không phải runtime của package

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Qmes*"]