[project]
name = "Qmes"
version = "0.1.0"
description = "Quantum Meta-learning for Encoding Selection — recommends quantum encoding circuits for tabular datasets without quantum evaluation at inference time."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "NOTICE", "Qmes/Qsun/LICENSE"]
authors = [
    { name = "Dao Duy Tung" },
    { name = "Nguyen Quoc Chuong" },
    { name = "Vu Tuan Hai" },
    { name = "Le Bin Ho" },
    { name = "Lan Nguyen Tran" },
]
maintainers = [
    { name = "Dao Duy Tung", email = "daoduytung1704@gmail.com" },
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scikit-learn>=1.3",
    "problexity>=0.5.0",
]

[project.optional-dependencies]
scripts = ["scipy>=1.7"]
data = ["ucimlrepo>=0.0.3"]
test = ["pytest>=7.0", "scipy>=1.7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Keep real warnings visible only the known-noisy problexity hub-score
# message is downgraded so it doesn't drown the summary.
filterwarnings = [
    "ignore:.*hub or authority scores are zeros.*:RuntimeWarning",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Qmes*"]

[tool.setuptools.package-data]
# Default pre-trained recommender bundles (D2): ship them so
# pip install Qmes gives a working load_default_recommender() out of
# the box, without requiring the user to run scripts/*/4_select_save.py
# first.
# The bundled Qsun license is shipped alongside the code to satisfy the
# MIT attribution requirement when the wheel is installed.
Qmes = [
    "_models/classification/*",
    "_models/regression/*",
    "Qsun/LICENSE",
]